@@ -1,5 +1,10 @@
 # vim: set noexpandtab:
 
+2012-07-22 Steve
+	* Added protection for dcache errors that give empty files
+	* Jobs will now abort if there are zero input entries
+	* Tagging SusyCommon-00-00-22
+
 2012-07-19 Steve
 	* Updated samples
 		* Adding Sherpa WW, Wbb, Wgamma, single top schan, 
